--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-import streamlit as st
-import numpy as np
-import pandas as pd
-import matplotlib.pyplot as plt
-import matplotlib.font_manager as fm
-import matplotlib.pyplot as plt
-import os
+streamlit
+pandas
+numpy
+matplotlib
+openpyxl
+os
